# fastapi-notifications

./: .gitignore  Dockerfile  alembic.ini  conftest.py  pyproject.toml
alembic/: env.py
alembic/versions/: 31eb1659d473_add_role.py  ebe3698fff65_init_database.py
src/: main.py
src/account/: auth.py  crud.py  models.py  router.py  schemas.py  utils.py
src/account/auth/: __init__.py  apikey.py  rolecheck.py
src/account/cruds/: account.py  role.py
src/account/models/: __init__.py  acount.py  role.py
src/account/repository/: account.py  role.py
src/account/routers/: __init__.py  account.py  role.py
src/account/schemas/: __init__.py  account.py  role.py
src/core/: database.py  settings.py
src/core/repository/: base.py
tests/: conftest.py
tests/data/: mock_account.json  mock_role.json
