[tool.poetry]
name = "logger-fastapi"
version = "0.1.0"
description = ""
authors = ["PatakIN <git@patakin.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
pydantic-settings = "^2.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
alembic = "^1.13.1"
aiosqlite = "^0.19.0"
bcrypt = "^4.1.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"
mypy = "^1.8.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
